{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 60,
  "lineage": "12d034fa-1049-b911-2f45-f19f1b041412",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374288915535:internet-gateway/igw-01593022690e69a55",
            "id": "igw-01593022690e69a55",
            "owner_id": "374288915535",
            "tags": {
              "Name": "nexus-claims-genai-java-igw"
            },
            "tags_all": {
              "Name": "nexus-claims-genai-java-igw"
            },
            "vpc_id": "vpc-0d505f72a3a2cff83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:374288915535:loadbalancer/net/nexus-claims-genai-java-nlb/e165ca851fc523c4",
            "arn_suffix": "net/nexus-claims-genai-java-nlb/e165ca851fc523c4",
            "dns_name": "nexus-claims-genai-java-nlb-e165ca851fc523c4.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:374288915535:loadbalancer/net/nexus-claims-genai-java-nlb/e165ca851fc523c4",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nexus-claims-genai-java-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0482305f406b06220"
              },
              {
                "subnet_id": "subnet-0743a7a2600460bae"
              }
            ],
            "subnets": [
              "subnet-0482305f406b06220",
              "subnet-0743a7a2600460bae"
            ],
            "tags": {
              "Name": "nexus-claims-genai-java-nlb"
            },
            "tags_all": {
              "Name": "nexus-claims-genai-java-nlb"
            },
            "vpc_id": "vpc-0d505f72a3a2cff83",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:374288915535:listener/net/nexus-claims-genai-java-nlb/e165ca851fc523c4/0556814d8b75f8ef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:374288915535:targetgroup/nexus-claims-genai-java-tg/b33bfd95c51c7b79",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:374288915535:listener/net/nexus-claims-genai-java-nlb/e165ca851fc523c4/0556814d8b75f8ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:374288915535:loadbalancer/net/nexus-claims-genai-java-nlb/e165ca851fc523c4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.eks_nodes",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:374288915535:targetgroup/nexus-claims-genai-java-tg/b33bfd95c51c7b79",
            "arn_suffix": "targetgroup/nexus-claims-genai-java-tg/b33bfd95c51c7b79",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "30080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:374288915535:targetgroup/nexus-claims-genai-java-tg/b33bfd95c51c7b79",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:374288915535:loadbalancer/net/nexus-claims-genai-java-nlb/e165ca851fc523c4"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nexus-claims-genai-java-tg",
            "port": 30080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d505f72a3a2cff83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374288915535:route-table/rtb-0109d548105bd6a8f",
            "id": "rtb-0109d548105bd6a8f",
            "owner_id": "374288915535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01593022690e69a55",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nexus-claims-genai-java-public-rt"
            },
            "tags_all": {
              "Name": "nexus-claims-genai-java-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d505f72a3a2cff83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b31e911b3cc89c0",
            "route_table_id": "rtb-0109d548105bd6a8f",
            "subnet_id": "subnet-0743a7a2600460bae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073c6b12cd94d9381",
            "route_table_id": "rtb-0109d548105bd6a8f",
            "subnet_id": "subnet-0482305f406b06220"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 30080,
            "id": "sgrule-37445367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0049088971336b19c",
            "security_group_rule_id": "sgr-0bb929e43a9bf74a5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374288915535:subnet/subnet-0743a7a2600460bae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0743a7a2600460bae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374288915535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nexus-claims-genai-java-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nexus-claims-genai-java-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d505f72a3a2cff83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374288915535:subnet/subnet-0482305f406b06220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0482305f406b06220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374288915535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nexus-claims-genai-java-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nexus-claims-genai-java-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d505f72a3a2cff83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374288915535:vpc/vpc-0d505f72a3a2cff83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8d6bb86bd1a9b1b",
            "default_route_table_id": "rtb-007f64a67d7edabda",
            "default_security_group_id": "sg-056626148a01b6d32",
            "dhcp_options_id": "dopt-09cde73d911f03f46",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d505f72a3a2cff83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007f64a67d7edabda",
            "owner_id": "374288915535",
            "tags": {
              "Name": "nexus-claims-genai-java-vpc"
            },
            "tags_all": {
              "Name": "nexus-claims-genai-java-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}